compilateurMinCaml/tests/typechecking/valid/int.ml
let x = (let z = 1 in z) in let y = x in print_int x