compilateurMinCaml/tests/typechecking/invalid/get.ml
let x = Array.create 1 101 in print_int x.(true)